# Cutilities

./: .gitignore  CMakeLists.txt  LICENSE  README.md  library.h  main.c
include/: linkedList.h
src/linkedList/: linkedList.c
tests/: CMakeLists.txt  test_linkedList.c
